@@ -1,6 +1,9 @@
 Changelog for Processeditor
 ===========================
 
+2024-02-24
+* Fixed MultiPartParser to return empty MultiPartObject for empty input string
+
 2024-02-08
 * Added PROP_INDEX to DomainClass (used to mark if an attribute should be indexed in the database)
 
